Sign-in form border alignment issue fix (closes #3)

--- a/login.css
+++ b/login.css
@@ -1,3 +1,4 @@
+* { box-sizing: border-box; }
 body {
    background: linear-gradient(-45deg, #7d87cf, #6866d6, #7b4cb8, #85f8e5, #7d87cf, #7b4cb8);
     background-size: 400% 400%;
